objects/HealthCloudGA__HcFlexibleCarePlanTabs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TabLabel__c</fullName>
        <inlineHelpText>If your label has a namespace prefix, use Label_Namespace.Label_Name. Otherwise, use c.Label_Name.</inlineHelpText>
        <label>Tab Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Flexible Care Plan Tabs</label>
</CustomObject>